--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
     </div>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-  <script src="{% static 'main/js/burger_button.js' %}"></script>
-  <script src="{% static 'main/js/more_about_button.js' %}"></script>
+  <script src="/static/js/burger_button.js"></script>
+  <script src="/static/js/more_about_button.js"></script>
   </body>
 </html>
 
