--- a/static/css/index.html
+++ b/static/css/index.html
@@ -6,10 +6,10 @@
     <link type="text/css" href="{%  static 'main/css/base.css'%}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Главная</title>
-    <link type="text/css" href="index.css" rel="stylesheet" />
-    <link type="text/css" href="base.css" rel="stylesheet" />
-    <link type="text/css" href="about.css" rel="stylesheet" />
-    <link type="text/css" href="paginator.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/index.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/base.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/about.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/paginator.css" rel="stylesheet" />
   </head>
   <body>
   <header id="main-header">
@@ -398,7 +398,7 @@
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="static/js/burger_button.js"></script>
-  <script src="/static/js/more_about_button.js"></script>
+  <script src="static/js/more_about_button.js"></script>
   </body>
 </html>
 
