--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="col-lg-12">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <h1 class="display-5 fw-bold mb-4" style="text-align: left;">{% trans "Admin Radar" %}</h1>
+                    <h1 class="display-5 fw-bold mb-4" style="text-align: left;">Admin Radar</h1>
                     <div class="row g-4 justify-content-center">
                         <!-- Карточка 1 -->
                         <div class="col-md-4">
@@ -85,7 +85,7 @@
              images/check-mark.ico' %}" width="24" height="24" class="me-3">
                  <div>
                                     <h4>100% невидим для ETS2MP</h4>
-                                    <p style="color:#b2b2b2;">В тракерсМП нет античита</p>
+                                    <p style="color:#b2b2b2;">Мы расскажем как обойти античит</p>
                                 </div>
                             </div>
                         </div>
