--- a/index.html
+++ b/index.html
@@ -413,13 +413,13 @@
                     <h5 class="mb-3" style="color: var(--text-main);">Соцсети</h5>
                     <div class="d-flex justify-content-center gap-3">
                         <a href="https://www.youtube.com/@Admin_RadarTMP" class="social-link">
-                            <img src="images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://t.me/Radar_TMP" class="social-link">
-                            <img src="images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://discord.gg/4urENWPF" class="social-link">
-                            <img src="images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                     </div>
                 </div>
