--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="{%  static 'main/css/base.css'%}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Главная</title>
     <link type="text/css" href="static/css/index.css" rel="stylesheet" />
@@ -27,7 +26,7 @@
 
           <!-- Основное меню (скрыто на мобильных) -->
           <ul id="nav-list" class="d-none d-md-flex">
-            <li><a class="nav-li-item" href="index.html">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="#">ГЛАВНАЯ</a></li>
             <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
             <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
             <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
@@ -38,7 +37,7 @@
       <!-- Мобильное меню (появляется при клике) -->
       <div id="mobile-menu" class="d-md-none">
         <ul>
-            <li><a class="nav-li-item" href="index.html">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="#">ГЛАВНАЯ</a></li>
             <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
             <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
             <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
@@ -401,9 +400,9 @@
             <div class="col-md-4 mb-3">
                 <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="/ru/main/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
-                    <li class="nav-item mb-2"><a href="/mods/" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
-                    <li class="nav-item mb-2"><a href="/news/" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
+                    <li class="nav-item mb-2"><a href="static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
                 </ul>
             </div>
 
