--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Главная</title>
-    <link type="text/css" href="static/css/index.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/base.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/about.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/paginator.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/index.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/base.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/about.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/paginator.css" rel="stylesheet" />
   </head>
   <body>
   <header id="main-header">
@@ -26,9 +26,9 @@
 
           <!-- Основное меню (скрыто на мобильных) -->
           <ul id="nav-list" class="d-none d-md-flex">
-            <li><a class="nav-li-item" href="#">ГЛАВНАЯ</a></li>
-            <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
-            <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html">НОВОСТИ</a></li>
             <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
           </ul>
         </div>
@@ -38,8 +38,8 @@
       <div id="mobile-menu" class="d-md-none">
         <ul>
             <li><a class="nav-li-item" href="#">ГЛАВНАЯ</a></li>
-            <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
-            <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html">НОВОСТИ</a></li>
             <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
         </ul>
       </div>
@@ -60,7 +60,7 @@
                         <!-- Карточка 1 -->
                         <div class="col-md-4">
                             <div class="advantage d-flex align-items-start p-3 rounded-3 card-feature advantage-card">
-                                <img src="static/images/check-mark.ico" width="24" height="24" class="me-3">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/check-mark.ico" width="24" height="24" class="me-3">
                                 <div>
                                     <h4>Не является читом</h4>
                                     <p style="color:#b2b2b2;">Анализирует файлы игры, не изменяя их</p>
@@ -70,7 +70,7 @@
                         <!-- Карточка 2 -->
                         <div class="col-md-4">
                             <div class="advantage d-flex align-items-start p-3 rounded-3 card-feature advantage-card">
-                                <img src="static/images/check-mark.ico" width="24" height="24" class="me-3">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/check-mark.ico" width="24" height="24" class="me-3">
                                 <div>
                                     <h4>Оповещает о появление админа</h4>
                                     <p style="color:#b2b2b2;">Сообщение и звуковой сигнал</p>
@@ -80,7 +80,7 @@
                         <!-- Карточка 3 -->
                         <div class="col-md-4">
                             <div class="advantage d-flex align-items-start p-3 rounded-3 card-feature advantage-card">
-                                <img src="static/images/check-mark.ico" width="24" height="24" class="me-3">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/check-mark.ico" width="24" height="24" class="me-3">
              images/check-mark.ico' %}" width="24" height="24" class="me-3">
                  <div>
                                     <h4>100% невидим для ETS2MP</h4>
@@ -97,7 +97,7 @@
                         <!-- Карточка 4 -->
                         <div class="col-md-4">
                             <div class="advantage d-flex align-items-start p-3 rounded-3 card-feature advantage-card">
-                                <img src="static/images/check-mark.ico" width="24" height="24" class="me-3">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/check-mark.ico" width="24" height="24" class="me-3">
                                 <div>
                                     <h4>Отключает урон трака</h4>
                                     <p style="color:#b2b2b2;">+ можно включить бесконечное топливо</p>
@@ -107,7 +107,7 @@
                         <!-- Карточка 5 -->
                         <div class="col-md-4">
                             <div class="advantage d-flex align-items-start p-3 rounded-3 card-feature advantage-card">
-                                <img src="static/images/check-mark.ico" width="24" height="24" class="me-3">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/check-mark.ico" width="24" height="24" class="me-3">
                                 <div>
                                     <h4>Скрывает реальную скорость</h4>
                                     <p style="color:#b2b2b2;">На спидометре 110, по факту 130</p>
@@ -117,7 +117,7 @@
                         <!-- Карточка 6 -->
                         <div class="col-md-4">
                             <div class="advantage d-flex align-items-start p-3 rounded-3 card-feature advantage-card">
-                                <img src="static/images/check-mark.ico" width="24" height="24" class="me-3">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/check-mark.ico" width="24" height="24" class="me-3">
                                 <div>
                                     <h4>Оптимизирован под рули</h4>
                                     <p style="color:#b2b2b2;">Кнопки не только на клавиатуре</p>
@@ -128,7 +128,7 @@
 
                     <div class="row mt-4">
                         <div class="col-md-4">
-                            <a href="templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none">Узнать больше</a>
+                            <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="hover-btn-animation more-btn" style="text-decoration: none">Узнать больше</a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                             </div>
                             <p class="price" style="margin-top:102px">350 ₽</p>
                             <div class="card-actions">
-                                <a href="templates/all_news.html" class="btn btn-outline">Подробнее</a>
+                                <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="btn btn-outline">Подробнее</a>
                                 <a href="https://funpay.com/users/15635673/" class="btn btn-primary funpay"><img src="static/images/funpay.png" height="25"></a>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <p class="text-secondary">Стробоскопы</p>
                             <p class="price">650 ₽</p>
                             <div class="card-actions">
-                                <a href="templates/all_news.html" class="btn btn-outline">Подробнее</a>
+                                <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="btn btn-outline">Подробнее</a>
                                 <a href="https://funpay.com/users/15635673/" class="btn btn-primary funpay"><img src="static/images/funpay.png' %}" height="25"></a>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                         <p style="margin: 0; color: var(--text-main); font-weight: bold; font-size: 16px;">buy me a coffe</p>
                     </div>
                 </div>
-                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">разраб написал код, но не хватило денег на нужный сервер, поэтому комментарии и фильтры не работают :(</p>
+                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">не хватило денег на нужный сервер, поэтому комментарии и т.п. не работают :(</p>
                 <p style="position: absolute; bottom: 10px; right: 15px; margin: 0; color: var(--text-secondary); font-size: 12px;">
                     19.07.25 22:53
                 </p>
@@ -267,7 +267,7 @@
                         <p style="margin: 0; color: var(--text-main); font-weight: bold; font-size: 16px;">miirageeee</p>
                     </div>
                 </div>
-                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">ну бан не прилетел</p>
+                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">в разделе новости все равно будем выкладывать обновы</p>
                 <p style="position: absolute; bottom: 10px; right: 15px; margin: 0; color: var(--text-secondary); font-size: 12px;">
                     22.05.25 15:12
                 </p>
@@ -280,7 +280,7 @@
                         <p style="margin: 0; color: var(--text-main); font-weight: bold; font-size: 16px;">asenaris</p>
                     </div>
                 </div>
-                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">radar lies a little in unpopulated places, but it works great on DD</p>
+                <p style="color: var(--text-main); margin: 0 0 30px 0; line-height: 1.5; white-space: pre-wrap;">кстати, сайт медленный именно из-за бесплатного хостинга</p>
                 <p style="position: absolute; bottom: 10px; right: 15px; margin: 0; color: var(--text-secondary); font-size: 12px;">
                     16.04.25 13:00
                 </p>
