--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                     За пару дней набросал код, чтобы протестировать идею. И чудо, оно заработало - надо продолжать! Созвонились с другом, с которым катаемся в truckersMP - ему понравилось. Он присоединился к разработке. Таким образом командой из 2 человек, на протяжение 2 недель мы писали новый функционал и тестировали его в игре.
                 </p>
                 <p class="hero-text" style="text-align: left;">
-                    {% trans "Выложили рекламный" %} <a href="https://youtu.be/8ToF3vsFBD0?si=cB6re5aqVqbBQSGV">ролик</a>trans "на YouTube. Но он собрал мало просмотров. Поэтому уже командой из 3 человек начали разрабатывать этот сайт для продвижения.
+                    Выложили рекламный <a href="https://youtu.be/8ToF3vsFBD0?si=cB6re5aqVqbBQSGV">ролик</a>на YouTube. Но он собрал мало просмотров. Поэтому уже командой из 3 человек начали разрабатывать этот сайт для продвижения.
                 </p>
                 <p class="hero-text" style="text-align: left;">
-                    Подробно узнать как он работает вы можете в" %} <a href="templates/all_news.html">блоге</a>
+                    Подробно узнать как он работает вы можете в <a href="templates/all_news.html">блоге</a>
                 </p>
                 <p class="hero-text" style="text-align: left;">
                     Разрабатывать мод для любимой игры - это настоящее удовольствие! Очень хочется поделиться им с другими игроками, Но так как обслуживать сайт и размещать его на сервере дорого, просим вас поддержать нас исключительно символической суммой. Так вы внесете свой вклад в развитие проекта.
@@ -313,12 +313,12 @@
             <!-- Грачев Илья -->
             <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
                 <div style="display: flex; gap: 20px;">
-                    <img src="static/images/Ilya.jpg" alt="Грачев Илья" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
+                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Ilya.jpg" alt="Грачев Илья" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
                     <div style="flex: 1;">
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                             <h3 style="color: var(--text-main); margin: 0;">Грачев Илья</h3>
                             <a href="https://github.com/sudo-ascend" style="color: var(--text-main);">
-                                <img src="static/images/github.ico" alt="GitHub" style="width: 25px; height: 25px;">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/github.ico" alt="GitHub" style="width: 25px; height: 25px;">
                             </a>
                         </div>
                         <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Админ / Разработчик</h6>
@@ -330,12 +330,12 @@
             <!-- Федор Сапронов -->
             <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
                 <div style="display: flex; gap: 20px;">
-                    <img src="static/images/Fedor.jpg" alt="Федор Сапронов" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
+                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Fedor.jpg" alt="Федор Сапронов" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
                     <div style="flex: 1;">
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                             <h3 style="color: var(--text-main); margin: 0;">Федор Сапронов</h3>
                             <a href="https://github.com/Fred640" style="color: var(--text-main);">
-                                <img src="static/images/github.ico" alt="GitHub" style="width: 25px; height: 25px;">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/github.ico" alt="GitHub" style="width: 25px; height: 25px;">
                             </a>
                         </div>
                         <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Стиль сайта</h6>
@@ -347,12 +347,12 @@
             <!-- Алексей Цуканов -->
             <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
                 <div style="display: flex; gap: 20px;">
-                    <img src="static/images/Alex.jpg" alt="Алексей Цуканов" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
+                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Alex.jpg" alt="Алексей Цуканов" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
                     <div style="flex: 1;">
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                             <h3 style="color: var(--text-main); margin: 0;">Алексей Цуканов</h3>
                             <a href="https://t.me/Radarr_TMP" style="color: var(--text-main);">
-                                <img src="static/images/telegram.ico" alt="Telegram" style="width: 25px; height: 25px;">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" style="width: 25px; height: 25px;">
                             </a>
                         </div>
                         <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Продукт / Пиар Менеджер</h6>
@@ -364,12 +364,12 @@
             <!-- Виктория Аксенова -->
             <div class="card team-member-card" style="background-color: var(--card-bg); padding: 20px; border-radius: 8px; box-shadow: var(--shadow-dark);">
                 <div style="display: flex; gap: 20px;">
-                    <img src="static/images/Victoria.jpg" alt="Виктория Аксенова" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
+                    <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/Victoria.jpg" alt="Виктория Аксенова" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-blue);">
                     <div style="flex: 1;">
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                             <h3 style="color: var(--text-main); margin: 0;">Виктория Аксенова</h3>
                             <a href="https://t.me/toria_aks" style="color: var(--text-main);">
-                                <img src="static/images/telegram.ico" alt="Telegram" style="width: 25px; height: 25px;">
+                                <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" style="width: 25px; height: 25px;">
                             </a>
                         </div>
                         <h6 style="color: var(--accent-blue); margin: 0 0 10px 0; font-size: 14px;">Дизайнер</h6>
@@ -400,9 +400,9 @@
             <div class="col-md-4 mb-3">
                 <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
-                    <li class="nav-item mb-2"><a href="static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
-                    <li class="nav-item mb-2"><a href="static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
                 </ul>
             </div>
 
@@ -431,8 +431,8 @@
     </div>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-  <script src="static/js/burger_button.js"></script>
-  <script src="static/js/more_about_button.js"></script>
+  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/burger_button.js"></script>
+  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_about_button.js"></script>
   </body>
 </html>
 
