--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <p class="price">650 ₽</p>
                             <div class="card-actions">
                                 <a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html" class="btn btn-outline">Подробнее</a>
-                                <a href="https://funpay.com/users/15635673/" class="btn btn-primary funpay"><img src="static/images/funpay.png' %}" height="25"></a>
+                                <a href="https://funpay.com/users/15635673/" class="btn btn-primary funpay"><img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/funpay.png" height="25"></a>
                             </div>
                         </div>
                     </div>
@@ -290,13 +290,13 @@
         </div>
         <div class="circle-pagination">
                 <span class="circle-pagination__item circle-pagination__item--disabled">&lt;</span>
-                <span class="circle-pagination__item circle-pagination__item--active">1</span>
-                <span class="circle-pagination__item circle-pagination__item--active">2</span>
-                <span class="circle-pagination__item circle-pagination__item--active">3</span>
-                <span class="circle-pagination__item circle-pagination__item--active">4</span>
-                <span class="circle-pagination__item circle-pagination__item--active">5</span>
+                <span class="circle-pagination__item">1</span>
+                <span class="circle-pagination__item">2</span>
+                <span class="circle-pagination__item">3</span>
+                <span class="circle-pagination__item">4</span>
+                <span class="circle-pagination__item">5</span>
                 <a class="circle-pagination__item" href="#">&gt;</a>
-        </div>
+        </div>  
     </div>
 </section>
 
@@ -412,13 +412,13 @@
                     <h5 class="mb-3" style="color: var(--text-main);">Соцсети</h5>
                     <div class="d-flex justify-content-center gap-3">
                         <a href="https://www.youtube.com/@Admin_RadarTMP" class="social-link">
-                            <img src="static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://t.me/Radar_TMP" class="social-link">
-                            <img src="static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://discord.gg/4urENWPF" class="social-link">
-                            <img src="static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                     </div>
                 </div>
