--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
         <div class="circle-pagination">
                 <span class="circle-pagination__item circle-pagination__item--disabled">&lt;</span>
-                <span class="circle-pagination__item">1</span>
+                <span class="circle-pagination__item circle-pagination__item--active">1</span>
                 <span class="circle-pagination__item">2</span>
                 <span class="circle-pagination__item">3</span>
                 <span class="circle-pagination__item">4</span>
@@ -417,7 +417,7 @@
                             <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://discord.gg/4urENWPF" class="social-link">
-                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                     </div>
                 </div>
